<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/containerDetail"
    android:overScrollMode="never"
    tools:context=".ui.detail.team.DetailTeamFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.FootBallApp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <RelativeLayout
                android:id="@+id/relativeView"
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:background="@color/design_default_color_primary">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/dimen_60dp"
                    android:layout_marginTop="@dimen/dimen_14dp"
                    android:text="@string/label_detail_team"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_text_20sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/img_poster_detail_team"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="30dp"
                            android:scaleType="centerCrop"
                            tools:src="@color/teal_700" />

                        <TextView
                            android:id="@+id/tv_stadium_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/img_poster_detail_team"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/dimen_text_18sp"
                            android:textStyle="bold"
                            android:layout_marginBottom="@dimen/_16dp"
                            tools:text="@string/tv_stadium" />



                    </RelativeLayout>


                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_back_button"
                app:popupTheme="@style/Theme.FootBallApp" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/content_detail_team"
        layout="@layout/content_detail_team"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"

        />




    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_favorite_white"
        android:layout_margin="15dp"
        app:fabSize="normal"
        app:tint="@null"
        app:borderWidth="0dp"
        app:elevation="6dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:id="@+id/fab_favorite"
        android:contentDescription="@string/button_favorite" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>